--- a/lab4/styles/style.css
+++ b/lab4/styles/style.css
@@ -11,7 +11,6 @@
 
   .header{
     display: flex;
-  
     width: 100%;
     min-height: var(--header_height);
     background-color: #fff;
@@ -95,16 +94,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 200px;
+    width: 180px;
     min-height: 30px;
     margin: 0 15px;
     margin-bottom: 80px;
     padding: 0 20px;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     border: 5px solid orange;
     text-align: center;
   }
 
+  .box_text{
+    width: 69%;
+    line-height: 1.2em;
+    height: 2.4em;
+    overflow: hidden;
+  }
+  
   .box_image{
     width: 80px;
     position: relative;
@@ -118,6 +124,129 @@
   }
   }
   
-  @media screen and (max-width: 1200px){
-  
+@media screen and (max-width: 1200px){
+  body{
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    --header_height: 60px;
+    --footer_height: 80px;
+    --header_margins: 40px;
   }
+  
+  .header{
+    display: flex;
+    width: 100%;
+    min-height: var(--header_height);
+    background-color: #fff;
+  }
+
+  .logo{
+    flex: 1;
+    margin-left: var(--header_margins);
+    margin-top: 10px;
+    font-size: 28px;
+    color: gray;
+  }
+
+  .menu{
+    margin-right: var(--header_margins);
+    margin-top: 10px;
+    
+  }
+
+  .menu_button{
+    width: 20%;
+  }
+
+  .menu_line{
+    width: 35px;
+    height: 3px;
+    background-color: black;
+    margin: 6px 0;
+  }
+  .main_context_text{
+    display: inline-block;
+  }
+
+  .main_img{
+    width: 100%;
+    height: 200px;
+  }
+
+  .footer{
+    min-height: var(--footer_height);
+    background-color: gray;
+    text-align: center;
+  }
+
+  .main{
+    min-height: calc(100vh - var(--header_height) - var(--footer_height));
+  }
+
+  .main_content_text{
+    width: 100%;
+    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .main_content_text h1{
+    padding-top: 15px;
+    font-size: 30px;
+    font-weight: 200;
+    margin-bottom: 0;
+  }
+
+  .main_content_text p{
+    width: 70%;
+    font-size: 20px;
+    font-weight: 100;
+    text-align: center;
+  }
+
+  .main_content_boxes_div{
+    width: 100%;
+    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main_content__box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    min-height: 30px;
+    margin: 0 15px;
+    margin-bottom: 80px;
+    padding: 0 20px;
+    padding-bottom: 20px;
+    border: 5px solid orange;
+    text-align: center;
+  }
+
+  .box_text{
+    font-size: 20px;
+    line-height: 1.2em;
+    height: 2.4em;
+    overflow: hidden;
+  }
+
+  .box_image{
+    width: 80px;
+    position: relative;
+    top: -30px;
+    z-index: 1;
+  }
+
+  .footer_text{
+    color: white;
+    line-height: var(--footer_height);
+  }
+}
